2021-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/maps-structs-constraints-2.pk: New test.
	* testsuite/poke.map/maps-structs-constraints-3.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (handle_struct_field_constraints): Pass
	@struct_type to check_struct_field_constraint.
	(check_struct_field_constraint): Add TYPE.FIELD information to the
	E_constraint exceptions.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am: use DISTCLEANFILES for the files generated
	by AX_CREATE_PKGCONFIG_INFO, not MOSTLYCLEANFILES.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (generate-vm-files): New rule.
	(pvm-vm.h): Likewise.
	(pvm-vm1.c): Likewise.
	(pvm-vm2.c): Likewise.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (MAINTAINERCLEANFILES): Add jitterc
	generated files and add $(srcdir) prefix to lex and bison
	generated files.
	* poke/Makefile.am (MAINTAINERCLEANFILES): Likewise.
	* DEV-NEWS: Add note about this.

2021-05-02  Jose E. Marchesi  <jemarch@gnu.org>

	* README: Add instructions on how to offer software to the GNU
	Project.

2021-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (yyreport_syntax_error): Fix memory leak.
	* libpoke/ios.c (ios_open): Avoid freeing an uninitialized
	pointer.
	(ios_read_string): Fix handling of errors from ios_read_uint.
	* libpoke/ios-dev-sub.c (ios_dev_sub_open): Handle ENOMEM.
	* libpoke/ios-dev-proc.c (ios_dev_proc_open): Likewise.

2021-05-01  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-settings.pk: New field `usage'.
	Add `usage' fields to predefined settings.
	* poke/pk-cmd-set.c (pk_cmd_set_init): Use usage messages from
	settings.

2021-04-30  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Do not check for tcl/tk if --disable-gui is
	specified at configure time.

2021-04-28  Jose E. Marchesi  <jemarch@gnu.org>
