@@ -62,3 +62,11 @@ sc_recfix_poke_rec:
 update-copyright-env = UPDATE_COPYRIGHT_HOLDER="Jose E. Marchesi"
 
 gendocs_options_ = -I $(abs_builddir)/doc/
+
+# Override the following line in maint.mk:
+#   submodule-checks ?= no-submodule-changes public-submodule-commit
+# That default prevents us from using commits from non-main branches in
+# submodules; this is notably a problem with Jitter, which keeps specific
+# public branches for poke releases; but according to the test in maint.mk
+# those branches do not count as "public".
+submodule-checks = no-submodule-changes
